k8s/03-api.yml
apiVersion: v1
kind: Service
metadata:
  name: newsapp-api
  namespace: newsapp
spec:
  selector:
    app: newsapp-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsapp-api
  namespace: newsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsapp-api
  template:
    metadata:
      labels:
        app: newsapp-api
    spec:
      containers:
        - name: api
          image: filipjovanovski1/newsapp-api:latest
          ports:
            - containerPort: 8080
