k8s/03b-api-alias.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: newsapp
spec:
  selector:
    app: newsapp-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
