k8s/04-web.yml
apiVersion: v1
kind: Service
metadata:
  name: newsapp-web
  namespace: newsapp
spec:
  selector:
    app: newsapp-web
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsapp-web
  namespace: newsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsapp-web
  template:
    metadata:
      labels:
        app: newsapp-web
    spec:
      containers:
        - name: web
          image: filipjovanovski1/newsapp-web:latest
          ports:
            - containerPort: 80
